# mnemos

./: .gitignore  README.md  package.json  pyproject.toml
js/: index.js  package.json
src/mnemos/: __init__.py  __main__.py  analysis.py  cli.py  compression.py  core.py  logging.py  memory_manager.py  patterns.py  protocol_core.py  protocol_examples.py  protocols.py
src/mnemos/cli/: __init__.py  auto_init.py  commands.py  formatters.py  main.py
src/mnemos/patterns/: __init__.py  flows.py  locations.py  momentum.py  search.py  surfacing.py
